--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-    <title>blog</title>
+    <title>rho | blog</title>
   </head>
   <body>
     <noscript>
