--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="розповіді / фото / фільми / думки ">
-    <title>rho | blog</title>
+    <meta name="description" content="Rho Blog – це розповіді, фото, фільми, думки">
+    <title>Подорожі та Фільми – Блог | Rho Blog</title>
   </head>
   <body>
     <noscript>
